force-app/main/default/objects/InventoryItem__c/InventoryItem__c.object-meta.xml
<CustomObject>
    <label>Item do Inventário</label>
    <nameField>
        <label>Item do Inventário Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itens do Inventário</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>