force-app/main/default/objects/InventoryItem__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <description>Inventário do item</description>
    <label>Inventário</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Itens do Inventário</relationshipLabel>
    <relationshipName>InventoryItem</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>