force-app/main/default/objects/InventoryItem__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Quantidade deste item no inventário.</description>
    <label>Quantidade</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>